Add Jackson Databind dependency for testing

--- a/project-1/build.gradle
+++ b/project-1/build.gradle
@@ -1,5 +1,11 @@
 description = 'project-1'
 
+dependencies {
+    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.17.3'
+    testRuntimeOnly 'com.fasterxml.jackson.core:jackson-databind:2.17.3'
+}
+
+
 test {
     useJUnitPlatform()
 }
