--- a/project-2/build.gradle
+++ b/project-2/build.gradle
@@ -1,5 +1,10 @@
 description = 'project-2'
 
+dependencies {
+    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.20.1'
+    testRuntimeOnly 'com.fasterxml.jackson.core:jackson-databind:2.20.1'
+}
+
 test {
     useJUnitPlatform()
 }
